<resources>
    <string name="app_name">IF3210-2024-Android-PPL</string>>
    <string name="title_transaction">Transaction</string>
    <string name="title_scan">Scan</string>
    <string name="title_graph">Graph</string>
    <string name="title_setting">Setting</string>
    <string name="login">LOGIN</string>
    <string name="login_button_text">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="drink_java_logo">drink java logo</string>
    <string name="button_for_sign_in">button for login</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="insert_your_password">Insert your password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Loading...</string>
    <string name="send_transaction">Send\nTransaction</string>
    <string name="save_transaction">Save\nTransaction</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">add_button</string>
    <string name="title">Title</string>
    <string name="insert_title">Insert Title</string>
    <string name="price">Price</string>
    <string name="insert_price">Insert Price</string>
    <string name="category">Category</string>
    <string name="select">Select Item</string>
    <string name="insert_location">Insert Location</string>
    <string name="button_save">Save</string>
    <string name="location">Location</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="show_location">Show Location</string>
    <string name="randomize_transaction">Randomize\nTransaction</string>
    <string name="quantity">Quantity</string>
    <string name="insert_quantity">Insert Quantity</string>
    <string name="transaction_image">Transaction Image</string>
    <string name="location_image">Location Image</string>
</resources>