<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transaction">

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.if3210_2024_android_ppl.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        android:textAppearance="@style/MontserratBoldText"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.if3210_2024_android_ppl.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.if3210_2024_android_ppl.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.if3210_2024_android_ppl.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_graph" />
</navigation>