<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/buttonSendTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_transaction"
            android:gravity="start|center_vertical"
            android:drawableEnd="@drawable/ic_send"
            android:textFontWeight="600"
            android:textColor="@color/black"
            android:background="@drawable/button_rounded_border"/>

        <Button
            android:id="@+id/buttonSaveTransaction"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_transaction"
            android:textFontWeight="600"
            android:gravity="start|center_vertical"
            android:drawableEnd="@drawable/ic_save"
            android:background="@drawable/button_rounded_border"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonBelow"
        android:textFontWeight="600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout" />
</LinearLayout>
