<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/transaction_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/transaction_image"
            android:src="@drawable/ic_store" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textFontWeight="400"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:ellipsize="end"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_image"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textFontWeight="400"
                    android:ellipsize="end" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/text_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/icon_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="15dp"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonShowLocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/transaction_container"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/show_location"
        android:textColor="@android:color/white"
        android:textFontWeight="500"
        android:textSize="10sp" />

</RelativeLayout>
